feature: minor edits to gsoc proposal

--- a/files/nelson-liu-scikit-learn-gsoc.tex
+++ b/files/nelson-liu-scikit-learn-gsoc.tex
@@ -71,6 +71,7 @@ By the end of this project, the following will have been completed:
   Finish up and merge stale pull request
   \textbf{\href{https://github.com/scikit-learn/scikit-learn/pull/6169}
     {\#6169 BestFirstTreeBuilder should ignore tree.max\_depth}}
+  \item
   Finish up and merge stale pull request
   \textbf{\href{https://github.com/scikit-learn/scikit-learn/pull/5181}
     {\#5181 Balanced Random Forest}}
@@ -102,7 +103,7 @@ By the end of this project, the following will have been completed:
   this combination of potential for practical application and high
   community demand, I think that it would be a great idea to dust off
   \textbf{\href{https://github.com/scikit-learn/scikit-learn/pull/941}
-    {\#941}} and implement post-pruning for decision trees.
+    {\#941}} and implement post-pruning for decision trees.\\
   \textbf{Implementation Plan:}\\
   Unfortunately,
   \textbf{\href{https://github.com/scikit-learn/scikit-learn/pull/941}
