fix: edited GSOC proposal.

--- a/files/nelson-liu-scikit-learn-gsoc.tex
+++ b/files/nelson-liu-scikit-learn-gsoc.tex
@@ -209,7 +209,8 @@ and I will adjust it if necessary depending on my summer progress.
   submitted by other contributors. Additionally, I plan to start
   investigation into various aspects of my Google Summer of Code
   project, such as literature reviews about tree pruning algorithms
-  and criterion.
+  and criterion. I will also implement the MAE regression tree during
+  this time period.
   \item
   \textbf{Week 1-3 (May 23, 2016 - June 12, 2016)}\\
   During these weeks, I plan on working on the tree pruning
@@ -228,31 +229,27 @@ and I will adjust it if necessary depending on my summer progress.
   in the tree pruning code. I hope to have the tree pruning code and
   docs merged at the end of week 7.
   \item
-  \textbf{Week 8-9 (July 11, 2016 - July 24, 2016)}\\
-  During these weeks, I plan to work on the MAE regression tree. I
-  plan to review literature regarding MAE and study
-  implementations online to draw the best elements from these eclectic
-  sources for use in a scikit-learn MAE regression tree. I plan on
-  spending thse weeks and the next on implementing the tree code and
-  verifying its correctness.
-  \item \textbf{Week 10-11 (July 25, 2016 - August 7, 2016)}\\
-  During this week, I will write unit tests to verify edge case
-  coverage and add details about the criterion to the documentation. I
-  will also use this time to iron out any last issues with the code,
-  and I plan to have the MAE regression tree merged at the end of Week
-  11.
-  \item \textbf{Week 12 (August 8, 2016 - August 14, 2016)}\\
+  \textbf{Week 8 (July 11, 2016 - July 17, 2016)}\\
   During this week, I want to address
   \textbf{\href{https://github.com/scikit-learn/scikit-learn/pull/6169}
     {\#6169 BestFirstTreeBuilder should ignore tree.max\_depth}} and
   get it merged into master.
+  \item 
+  \textbf{Week 9-12 (July 18, 2016 - August 14, 2016)}\\
+  During these weeks, I plan on implementing the code for
+  \textbf{\href{https://github.com/scikit-learn/scikit-learn/pull/5181}
+    {\#5181 Balanced Random Forest}}.
   \item
-  \textbf{Week 13-14 (August 15, 2016 - August 23, 2016)}\\
+  \textbf{Week 13 (August 15, 2016 - August 21, 2016)}\\
+  During this week, I plan on writing tests and documentation for the
+  balanced Random Forest. After this week, it is my goal to get the PR
+  merged into master.
+  \item
+  \textbf{Week 14 (August 21, 2016 - August 23, 2016)}\\
   During this week, I plan on finishing up pull request
   \textbf{\href{https://github.com/scikit-learn/scikit-learn/pull/5181}
     {\#5181 Balanced Random Forest}} and merging the balanced Random
   Forest parameter into the codebase.
-
 \end{itemize}
 \section{Student Information}
 \subsection{Personal Information}
