fix: add more fixes to gsoc proposal, talk about how timeline is conservative

--- a/files/nelson-liu-scikit-learn-gsoc.tex
+++ b/files/nelson-liu-scikit-learn-gsoc.tex
@@ -198,7 +198,10 @@ During each of these weeks, I will be submitting at least one pull
 request unrelated to the \texttt{tree} module / my Google Summer of Code project. These
 weeks are not hard deadlines; if I finish a deadline early, I will
 move on to the next. In other words, this timeline is quite flexible
-and I will adjust it if necessary depending on my summer progress.
+and I will adjust it if necessary depending on my summer
+progress. This timeline is quite conservative; I think it is far
+better to underscope the project and have it completed and polished by
+the end of the summer than overscope the project and run out of time.
 \begin{itemize}
   \item 
   \textbf{Community Bonding Period (April 22, 2016 - May 22,
