fix: edit gsoc proposal to fix a week's plans

--- a/files/nelson-liu-scikit-learn-gsoc.tex
+++ b/files/nelson-liu-scikit-learn-gsoc.tex
@@ -249,10 +249,8 @@ the end of the summer than overscope the project and run out of time.
   merged into master.
   \item
   \textbf{Week 14 (August 21, 2016 - August 23, 2016)}\\
-  During this week, I plan on finishing up pull request
-  \textbf{\href{https://github.com/scikit-learn/scikit-learn/pull/5181}
-    {\#5181 Balanced Random Forest}} and merging the balanced Random
-  Forest parameter into the codebase.
+  During this week, I want to finalize any loose ends and make sure my
+  overall project is of polished high quality.
 \end{itemize}
 \section{Student Information}
 \subsection{Personal Information}
